Abstract hidden HTML to CSS

--- a/privacidad.html
+++ b/privacidad.html
@@ -83,7 +83,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 					<div class="row"><!-- Row -->
 						<div class="col-md-6 col-sm-6 col-xs-12 top-left">
 							<span>TELÉFONO RESERVAS: <a href="tel:(+34)693 762 370">(+34) 693 762 370</a></span>
-                            	<!--<button type="button" class="btn menupopup_btn" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar"></i>RESERVA ONLINE</button>-->
+                            	<button type="button" class="btn menupopup_btn" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar"></i>RESERVA ONLINE</button>
                         </div>
 						<div class="col-md-6 col-sm-6 col-xs-12 top-right">
 							<ul class="top-social">
@@ -146,7 +146,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
     								<a title="Menu" href="menu.html">Menú</a>
     							</li>
     							<li id="menu-item-138" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-138">
-    								<!--<a title="Reservas" href="reservation.html">Reservas</a>-->
+    								<a title="Reservas" href="reservation.html">Reservas</a>
     							</li>
 							</ul>
 						</li>
@@ -340,7 +340,7 @@ La dirección de contacto del Delegado de Protección de Datos designado por el 
 										<ul id="menu-menu-categories" class="menu">
 											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a href="gallery.html">GALERÍA</a></li>
 											<li id="menu-item-356" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-356"><a href="menu.html">MENÚS</a></li>
-											<!--<li id="menu-item-357" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-357"><a href="reservation.html">RESERVAS</a></li>-->
+											<li id="menu-item-357" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-357"><a href="reservation.html">RESERVAS</a></li>
 											<li id="menu-item-358" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-358"><a href="shop.html">REGALA MU•NA</a></li>
 											<li id="menu-item-359" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-359"><a href="blog.html">BLOG</a></li>
 										</ul>
