Remove reservas via CSS

--- a/menu.html
+++ b/menu.html
@@ -289,7 +289,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
     					</div><!-- About Section /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
-								<div class="wpb_wrapper">
+								<div class="wpb_wrapper hide_reserva">
 									<div class="container-fluid no-left-padding no-right-padding book-table-section" style='background-image: url(photos/bg-form.jpg);'>
 										<div class="container"><!-- Container -->
 											<div class="section-header section-header2 text-center"><!-- Section Header -->
