--- a/blog1.html
+++ b/blog1.html
@@ -92,7 +92,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 							</ul>
 						<div class="search-block">
 							<div class="header-search">
-								<form method="get" id="s-943" class="searchform" action="http://www.restaurantemuna.com/">
+								<form method="get" id="s-943" class="searchform" action="/">
 									<div class="input-group">
 										<input type="text" name="s" id="header_s943" placeholder="Buscar" class="form-control" required>
 										<span class="input-group-btn"><button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button></span>
@@ -101,7 +101,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 								</form>
 							</div>
 							<div class="page_search">
-								<form method="get" id="283" class="searchform" action="http://www.restaurantemuna.com/">
+								<form method="get" id="283" class="searchform" action="/">
 									<div class="input-group">
 										<input type="text" name="s" id="s-283" placeholder="Buscar . . ." class="form-control" required>
 										<span class="input-group-btn"><button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button></span>
@@ -360,7 +360,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 			<div class="widget-area col-md-3 col-sm-4 col-xs-12 sidebar-right sidebar-1"><!-- Sidebar -->
 				<aside id="search-2" class="widget widget_search">
 					<div class="header-search">
-						<form method="get" id="s-803" class="searchform" action="http://restaurantemuna.com/">
+						<form method="get" id="s-803" class="searchform" action="/">
 							<div class="input-group">
 								<input type="text" name="s" id="header_s803" placeholder="Buscar" class="form-control" required>
 									<span class="input-group-btn">
@@ -370,7 +370,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						</form>
 					</div>
 					<div class="page_search">
-						<form method="get" id="921" class="searchform" action="http://restaurantemuna.com/">
+						<form method="get" id="921" class="searchform" action="/">
 							<div class="input-group">
 								<input type="text" name="s" id="s-921" placeholder="Buscar . . ." class="form-control" required>
 									<span class="input-group-btn">
