--- a/reservation.html
+++ b/reservation.html
@@ -92,7 +92,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 							</ul>
 						<div class="search-block">
 							<div class="header-search">
-								<form method="get" id="s-943" class="searchform" action="http://www.restaurantemuna.com/">
+								<form method="get" id="s-943" class="searchform" action="/">
 									<div class="input-group">
 										<input type="text" name="s" id="header_s943" placeholder="Buscar" class="form-control" required>
 										<span class="input-group-btn"><button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button></span>
@@ -101,7 +101,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 								</form>
 							</div>
 							<div class="page_search">
-								<form method="get" id="283" class="searchform" action="http://www.restaurantemuna.com/">
+								<form method="get" id="283" class="searchform" action="/">
 									<div class="input-group">
 										<input type="text" name="s" id="s-283" placeholder="Buscar . . ." class="form-control" required>
 										<span class="input-group-btn"><button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button></span>
