Prettify links to index

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-						<a class="navbar-brand image-logo" href="index.html" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.png" alt=""/></a>
+						<a class="navbar-brand image-logo" href="/" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.png" alt=""/></a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul id="menu-primary-menu" class="nav navbar-nav navbar-right">
 						<li id="menu-item-146" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-110 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-146 active">
-							<a title="Inicio" href="index.html">Inicio</a>
+							<a title="Inicio" href="/">Inicio</a>
 						</li>
 						<li id="menu-item-143" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-143">
 							<a title="Nosotros" href="about.html">Nosotros</a>
