--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -82,12 +82,12 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-						<a class="navbar-brand image-logo" href="index.html" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.png" alt=""/></a>
+						<a class="navbar-brand image-logo" href="/" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.png" alt=""/></a>
 				</div>
-				
+
 			</div><!-- Container /- -->
 		</nav><!-- Ownavigation /- -->
-		
+
 	</header><!-- Header Section /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
@@ -112,14 +112,14 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-				
+
 		<div class="container-fluid bottom-footer"><!-- Bottom Footer -->
 			<p>© Copyrights 2018 - All Rights Reserved • Desing: STUDIO AGS</p>
 		</div><!-- Bottom Footer /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		</footer><!-- Footer Main /- -->
-<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->		
-		
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
 
 <script type="text/javascript">
 				function revslider_showDoubleJqueryError(sliderID) {
