--- a/contacto.html
+++ b/contacto.html
@@ -319,34 +319,16 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 									<div class="col-xs-12 ">
 										<h3 class="title-left">Contacta con Nosotros</h3>
 									</div>
-								<div class="col-xs-12 no-left-padding no-right-padding">
-									<div role="form">
-										<div class="screen-reader-response"></div>
-											<form action="assets/php/procesa-contacto.php" method="post" class="wpcf7-form">
-
-												<div class="form-group col-xs-6">
-													<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-required="true" aria-invalid="false" placeholder="Nombre*" /></span>
-												</div>
-												<div class="form-group col-xs-6">
-													<span class="wpcf7-form-control-wrap your-phone"><input type="text" name="your-phone" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-required="true" aria-invalid="false" placeholder="Teléfono*" /></span>
-												</div>
-												<div class="form-group col-xs-6">
-													<span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email" aria-required="true" aria-invalid="false" placeholder="Email*" /></span>
-												</div>
-												<div class="form-group col-xs-6">
-													<span class="wpcf7-form-control-wrap your-address"><input type="text" name="your-address" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-required="true" aria-invalid="false" placeholder="Dirección*" /></span>
-												</div>
-												<div class="form-group col-xs-12">
-													<span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-required="true" aria-invalid="false" placeholder="Asunto*" /></span>
-												</div>
-												<div class="form-group col-xs-12">
-													<span class="wpcf7-form-control-wrap your-message"><textarea name="tu-mensaje" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Mensaje"></textarea></span>
-												</div>
-												<div class="col-xs-12">
-													<input type="submit" value="ENVIAR" class="wpcf7-form-control wpcf7-submit" />
-												</div>
-											</form>
-										</div>
+								<div class="col-xs-12 no-left-padding no-right-padding about-detail">
+									<p>Para reservas o preguntas, contacte por teléfono al:</p>
+									<p class="bolder">(+34) 693 762 370</p>
+									<p>
+										En caso de no contestar o ser fuera de horario, contacte
+										<a href="mailto:reservas@restaurantemuna.com">reservas@restaurantemuna.com</a>
+										para reservas o
+										<a href="info@restaurantemuna.com">info@restaurantemuna.com</a>
+										si tiene alguna pregunta.
+									</p>
 									</div>
 								</div>
 							</div><!-- Container -->
