--- a/contacto.html
+++ b/contacto.html
@@ -295,7 +295,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 												<i><img src="photos/icons/cnt-marker.png" alt="Marker" /></i>
 												<h4>DIRECCIÓN</h4>
 												<p>
-													Ctra. Molinaseca, 27</br>
+													Calle Gil y Carrasco, 25</br>
 													24401 PONFERRADA<br>
 													(León)
 												</p>
