--- a/menu.html
+++ b/menu.html
@@ -266,21 +266,20 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 								<div class="row"><!-- Row -->
 									<div class="col-md-7 about-detail text-center item-center">
 					  				<p>La mejor manera de conocer nuestra cocina es a través de nuestros menús; disponemos de dos tipos de menús, MENÚ DEGUSTACIÓN y MENÚ EXPERIENCIA, que cambian cada mes para ofrecer siempre los mejores productos de temporada. El menú se adaptará en la medida de lo posible a los gustos e intolerancias de nuestros clientes para que todos los platos sean siempre de su agrado.</p>
-					  				<p>Todos nuestros menús incluyen Agua KM0, pan y mantequilla, además de opción de maridaje.</p>
 										<div class="col-md-6 col-sm-6 col-xs-12 c-menu">
-											<h3 class="c-menu__title">DEGUSTACIÓN</h3>
-											<p>2 aperitivos</p>
-											<p>4 platos</p>
-											<p>2 dulces</p>
-											<h2 class="c-menu__price">35€</h2>
-											<p>I.V.A. incluido</p>
+											<h3 class="c-menu__title">BISTRO</h3>
+											<p>Conoce nuestro nuevo espacio donde podrás probar una cocina más desenfadada y canalla, donde cambiamos los platos cada día según el mercado.</p>
+											<p>Para cualquier consulta o información llámanos a nuestro teléfono de contacto. Gracias.</p>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-12 c-menu">
-											<h3 class="c-menu__title">EXPERIENCIA</h3>
+											<h3 class="c-menu__title">GASTRONÓMICO</h3>
+											<p>Pan y aceite del Bierzo</p>
+											<p>1 snack</p>
 											<p>2 aperitivos</p>
-											<p>6 platos</p>
+											<p>4 platos</p>
 											<p>3 dulces</p>
-											<h2 class="c-menu__price">42€</h2>
+											<h2 class="c-menu__price">40€</h2>
+											<p><i>Opción de maridaje de vinos 20€</i></p>
 											<p>I.V.A. incluido</p>
 										</div>
 									</div>
