Add footer link to privacy policy

--- a/blog1.html
+++ b/blog1.html
@@ -655,7 +655,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 		<div class="container-fluid bottom-footer"><!-- Bottom Footer -->
-			<p>© Copyrights 2018 - All Rights Reserved • Desing: STUDIO AGS</p>
+			<p>© Copyrights 2019 - All Rights Reserved • <a href="privacy.html">Política de privacidad</a></p>
 		</div><!-- Bottom Footer /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		</footer><!-- Footer Main /- -->
