--- a/privacidad.html
+++ b/privacidad.html
@@ -440,7 +440,7 @@ La dirección de contacto del Delegado de Protección de Datos designado por el 
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 		<div class="container-fluid bottom-footer"><!-- Bottom Footer -->
-			<p>© Copyrights 2018 - All Rights Reserved • Desing: STUDIO AGS</p>
+			<p>© Copyrights 2019 - All Rights Reserved • <a href="privacy.html">Política de privacidad</a></p>
 		</div><!-- Bottom Footer /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		</footer><!-- Footer Main /- -->
