--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="es-ES" class="no-js no-svg">
 
 <head>
-<title>Sobre Nosotros - MU•NA Restaurante</title>
+<title>Política de privacidad - MU•NA Restaurante</title>
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9" />
@@ -126,8 +126,8 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						<li id="menu-item-146" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-110 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-146">
 							<a title="Inicio" href="/">Inicio</a>
 						</li>
-						<li id="menu-item-143" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-143 active">
-							<a title="Nosotros" href="privacy.html">Nosotros</a>
+						<li id="menu-item-143" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-143">
+							<a title="Nosotros" href="about.html">Nosotros</a>
 						</li>
 						<li id="menu-item-156" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-156 dropdown">
 							<a title="Servicios" href="#" class="dropdown-toggle" aria-haspopup="true">Servicios <span class="fa fa-angle-down"></span></a>
@@ -447,7 +447,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 		<div class="container-fluid bottom-footer"><!-- Bottom Footer -->
-			<p>© Copyrights 2018 - All Rights Reserved • Desing: STUDIO AGS</p>
+			<p>© Copyrights 2019 - All Rights Reserved • <a href="privacy.html">Política de privacidad</a></p>
 		</div><!-- Bottom Footer /- -->
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		</footer><!-- Footer Main /- -->
