--- a/privacy.html
+++ b/privacy.html
@@ -260,9 +260,9 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 							<div class="container"><!-- Container -->
 								<div class="row"><!-- Row -->
 									<div class="col-md-7 about-detail">
-										<p>El presente Política de Privacidad establece los términos en que Restaurante Muna usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</p>
+										<p>La presente Política de Privacidad establece los términos en que Restaurante Muna usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</p>
 
-										<h3>Información que es recogida</h3>
+										<h3>Información recogida</h3>
 										<p>Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.</p>
 
 										<h3>Uso de la información recogida</h3>
