Add dropbox menu page

--- a/menu.html
+++ b/menu.html
@@ -262,22 +262,24 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 							<div class="container"><!-- Container -->
 								<div class="row"><!-- Row -->
 									<div class="col-md-7 about-detail text-center item-center">
-					  				<p>La mejor manera de conocer nuestra cocina es a través de nuestros menús; disponemos de dos tipos de menús, MENÚ DEGUSTACIÓN y MENÚ EXPERIENCIA, que cambian cada mes para ofrecer siempre los mejores productos de temporada. El menú se adaptará en la medida de lo posible a los gustos e intolerancias de nuestros clientes para que todos los platos sean siempre de su agrado.</p>
 										<div class="col-md-6 col-sm-6 col-xs-12 c-menu">
-											<h3 class="c-menu__title">BISTRO</h3>
-											<p>Conoce nuestro nuevo espacio donde podrás probar una cocina más desenfadada y canalla, donde cambiamos los platos cada día según el mercado.</p>
-											<p>Para cualquier consulta o información llámanos a nuestro teléfono de contacto. Gracias.</p>
+											<h3 class="c-menu__title">CARTA</h3>
+											<p>Cambia cada mes</p>
+											<br>
+
+											<div class="about-detail">
+												<a href="https://www.dropbox.com/s/bw5adxmikglogk1/carta.pdf?raw=1" target="_blank">Ver carta</a>
+											</div>
+
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-12 c-menu">
-											<h3 class="c-menu__title">GASTRONÓMICO</h3>
-											<p>Pan y aceite del Bierzo</p>
-											<p>1 snack</p>
-											<p>2 aperitivos</p>
-											<p>4 platos</p>
-											<p>3 dulces</p>
-											<h2 class="c-menu__price">40€</h2>
-											<p><i>Opción de maridaje de vinos 20€</i></p>
-											<p>I.V.A. incluido</p>
+											<h3 class="c-menu__title">MENÚ</h3>
+											<p>Cambia a diario</p>
+											<br>
+
+											<div class="about-detail">
+												<a href="https://www.dropbox.com/s/ohw2irlbzzf6lt9/menu.pdf?raw=1" target="_blank">Ver menú</a>
+											</div>
 										</div>
 									</div>
 								</div><!-- Row /- -->
