Make schedule cleaner

--- a/menu.html
+++ b/menu.html
@@ -427,13 +427,13 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 								<h3 class="widget-title">HORARIO</h3>
 									<table>
 										<tr>
-											<td>MIÉRCOLES-VIERNES<br>13:30h.-15:30h./21:30h.-23:30h.</td>
+											<td>MIÉRCOLES-VIERNES<br>13:30 - 15:30 / 21:30 - 23:30</td>
 										</tr>
 										<tr>
-											<td>SÁBADOS<br>13:30h.-15:30h./21:30h.-23:30h.</td>
+											<td>SÁBADOS<br>13:30 - 15:30 / 21:30 - 23:30</td>
 										</tr>
 										<tr>
-											<td>DOMINGOS<br>13h.-15h.</td>
+											<td>DOMINGOS<br>13:00 - 15:00</td>
 										</tr>
 										<tr>
 											<td>FESTIVOS<br>Consultar</td>
