Add new gallery pics

--- a/gallery.html
+++ b/gallery.html
@@ -258,6 +258,37 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 													<div class="row"><!-- Row -->
 														<div class="gallery-list gallery-fitrow">
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9121.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9121.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9129.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9129.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9149.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9149.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9160.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9160.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9163.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9163.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9191.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9191.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9217.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9217.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9247.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9247.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9266.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9266.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
+																<a class="zoom-in" href="photos/new/_CMF9302.jpg"><img width="511" height="340" src="photos/new/preview/_CMF9302.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
+															</div>
+
+															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast dinner nonveg">
 																<a class="zoom-in" href="photos/gallery1.jpg"><img width="511" height="340" src="photos/gallery1-511x340.jpg" class="attachment-maxrestaurant_263_289 size-maxrestaurant_263_289 wp-post-image" alt="" /></a>
 															</div>
 															<div class="gallery-box col-md-3 col-sm-4 col-xs-4 breakfast coffee dinner lunch nonveg">
