Change logo to SVG

--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -82,7 +82,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-						<a class="navbar-brand image-logo" href="/" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.png" alt=""/></a>
+						<a class="navbar-brand image-logo" href="/" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.svg" alt=""/></a>
 				</div>
 
 			</div><!-- Container /- -->
