--- a/menu.html
+++ b/menu.html
@@ -123,7 +123,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-						<a class="navbar-brand image-logo" href="/" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.png" alt=""/></a>
+						<a class="navbar-brand image-logo" href="/" style="max-width: 225px;  max-height: 73px;"><img src="photos/logo.svg" alt=""/></a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul id="menu-primary-menu" class="nav navbar-nav navbar-right">
