--- a/privacy.html
+++ b/privacy.html
@@ -76,7 +76,7 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 				<div class="container"><!-- Container -->
 					<div class="row"><!-- Row -->
 						<div class="col-md-6 col-sm-6 col-xs-12 top-left">
-							<span>TELÉFONO RESERVAS: <a href="tel:(+34)693 762 370">(+34) 693 762 370</a></span>
+							<span>TELÉFONO RESERVAS: (+34) 693 762 370</span>
                             	<button type="button" class="btn menupopup_btn" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar"></i>RESERVA ONLINE</button>
                         </div>
 						<div class="col-md-6 col-sm-6 col-xs-12 top-right">
