--- a/shop.html
+++ b/shop.html
@@ -147,6 +147,9 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 						<li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153">
 							<a title="Contact" href="contacto.html">Contacto</a>
 						</li>
+						<li id="menu-item-157" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-157">
+							<a title="Reserva online" target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">Reservas</a>
+						</li>
 					</ul>
 				</div>
 				<div id="loginpanel" class="desktop-hide">
@@ -324,9 +327,9 @@ function setREVStartSize(e){try{ var i=jQuery(window).width(),t=9999,r=0,n=0,l=0
 								<h3 class="widget-title">SERVICIOS</h3>
 									<div class="menu-menu-categories-container">
 										<ul id="menu-menu-categories" class="menu">
+											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a target="_blank" href="https://module.lafourchette.com/es_ES/module/480267-fbba6">RESERVA ONLINE</a></li>
 											<li id="menu-item-355" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-355"><a href="gallery.html">GALERÍA</a></li>
 											<li id="menu-item-356" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-356"><a href="menu.html">MENÚS</a></li>
-											<li id="menu-item-357" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-357"><a href="reservation.html">RESERVAS</a></li>
 											<li id="menu-item-358" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-358"><a href="shop.html">REGALA MU•NA</a></li>
 										</ul>
 									</div>
